--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,40 @@
-<mat-toolbar color="primary">
+<div style="height: 100vh;">
+    <mat-toolbar color="primary">
+    
+        <h1>BP3 - test application</h1>
 
-    <h1>BP3 - test application</h1>
+        <span class="example-spacer"></span>
   
-    <span class="example-spacer"></span>
+      <div fxShow="true" fxHide.lt-md="true">
   
-    <a routerLink="" routerLinkActive="active">List</a>
-    <a routerLink="about" routerLinkActive="active">About</a>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
   
-  </mat-toolbar>
+        <a routerLink="" routerLinkActive="active" mat-button>List</a>
+        <a routerLink="about" routerLinkActive="active" mat-button>About</a>
+  
+      </div>
 
-<router-outlet></router-outlet>
-
-
-<!-- <div class="container"
-     [fxLayout]="direction"
-     fxLayout.xs="column"
-     fxLayoutAlign="center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-  <div class="item item-1" fxFlex="15%">Item 1</div>
-  <div class="item item-2" fxFlex="60%" fxFlexOrder="3">Item 2</div>
-  <div class="item item-3" fxFlex>Item 3</div>
+      <div fxShow="true" fxHide.gt-sm="true">
+  
+          <button (click)="sidenav.toggle()" mat-button>Show Side Menu</button>
+    
+        </div>
+  
+    </mat-toolbar>
+  
+    <mat-sidenav-container fxFlexFill class="example-container">
+  
+      <mat-sidenav #sidenav fxLayout="column">
+  
+        <div fxLayout="column">
+          <a (click)="sidenav.toggle()" routerLink="" routerLinkActive="active" mat-button>List</a>
+          <a (click)="sidenav.toggle()" routerLink="about" routerLinkActive="active" mat-button>About</a>
+  
+        </div>
+  
+      </mat-sidenav>
+  
+      <router-outlet></router-outlet>
+  
+    </mat-sidenav-container>
 </div>
-
-<div class="container"
-     fxLayout
-     fxLayout.xs="column"
-     fxLayoutAlign="center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-  <div class="item item-4" fxFlex fxFlexOffset="50px"  fxFlexOffset.xs="0">Item 4</div>
-  <div class="item item-5" fxFlex="200px">Item 5</div>
-</div> -->
-
