First basic list and add CORS support to the node server

--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,3 +1,12 @@
-<p>
-  lists works!
-</p>
+<div class="container">
+    <mat-card *ngFor="let node of nodes">
+        <mat-card-header>
+          <mat-card-title>{{node.name}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            {{node.type}}
+          </p>
+        </mat-card-content>
+      </mat-card>
+</div>
