Add the json viewer, support for the mat-radio-button, angular forms

--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,12 +1,51 @@
-<div class="container">
-    <mat-card *ngFor="let node of nodes">
-        <mat-card-header>
-          <mat-card-title>{{node.name}}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            {{node.type}}
-          </p>
-        </mat-card-content>
-      </mat-card>
-</div>
+<mat-card>
+    <mat-radio-group class="endpoint-radio-group" [(ngModel)]="selectedEndpoint">
+        <mat-radio-button class="endpoint-radio-button" *ngFor="let endpoint of endpoints" [value]="selectedEndpoint">
+          {{endpoint.path}}
+        </mat-radio-button>
+      </mat-radio-group>
+      <div class="endpoint-selected-value">The endpoint you are using is: {{selectedEndpoint}}</div>
+</mat-card>
+
+<mat-card>
+    <mat-card-content>
+      <h2 class="example-h2">Json response for <strong>/3-branching-process</strong></h2>
+      <mat-tab-group class="demo-tab-group">
+        <mat-tab label="Cards">
+          <head>
+            <h2>Nodes</h2>
+          </head>
+            <div class="container">
+                <mat-card *ngFor="let node of nodes">
+                    <mat-card-header>
+                      <mat-card-title>{{node.id}}</mat-card-title>
+                      <mat-card-subtitle>{{node.name}}</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <p>
+                        {{node.type}}
+                      </p>
+                    </mat-card-content>
+                  </mat-card>
+            </div>
+            <head>
+                <h2>Edges</h2>
+              </head>
+                <div class="container">
+                    <mat-card *ngFor="let edge of edges">
+                        <mat-card-header>
+                          <mat-card-title>{{edge.from}}</mat-card-title>
+                          <mat-card-subtitle>{{edge.to}}</mat-card-subtitle>
+                        </mat-card-header>
+                      </mat-card>
+                </div>
+        </mat-tab>
+        <mat-tab label="Json">
+          <div class="demo-tab-content">
+              <ngx-json-viewer [json]="entireResponse"></ngx-json-viewer>
+          </div>  
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card-content>
+  </mat-card>
+  
