--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -21,6 +21,7 @@
           </mat-card-content>
         </mat-card>
     <mat-card-content>
+      <mat-icon [hidden]="!isLoading">spinner</mat-icon>
       <mat-tab-group class="demo-tab-group">
         <mat-tab label="Cards">
           <head>
@@ -32,7 +33,7 @@
                       <mat-card-title>{{node.id}}</mat-card-title>
                       <mat-card-subtitle>{{node.name}}</mat-card-subtitle>
                     </mat-card-header>
-                    <mat-icon>home</mat-icon>
+                    <mat-icon>{{iconsList[node.type]}}</mat-icon>
                     <mat-card-content>
                       <p>
                         {{node.type}}
