--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,4 +45,11 @@ main {
   mat-icon{
     font-family: 'Material Icons' !important;
   }
+
+  mat-chip {
+    max-width: 200px;
+    padding: 1em;
+    border-radius: 50%;
+    margin: 1em;
+  }
   
