Adding more styling and the about information

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,36 @@
-<p>
-  about works!
-</p>
+<main class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+  <section fxFlex="50%" class="about-info-container">
+    <h2>
+      BP3 Test Application
+    </h2>
+    <p>
+      Developed by: Pablo Andrés Vélez Vidal
+    </p>
+    <article>
+      <h3>Information about the App's architecture</h3>
+      <div>
+        <h4>Technologies Used:</h4>
+        <ul>
+          <li>Angular 5</li>
+          <li>Angular Material Design</li>
+          <li>Angular Flex-Layout</li>
+          <li>Sass</li>
+        </ul>
+      </div>
+    </article>
+  </section>
+  <section fxFlex="50%" class="about-info-container">
+    <h2>
+      Contact Information:
+    </h2>
+    <p>
+      Email: pablovv2012@gmail.com 
+    </p>
+    <p>
+      Cellphone: +57 318 876 2544 | +34 694 576 897
+    </p>
+    <p>
+      Location: Cali, Colombia
+    </p>
+  </section>
+</main>
