Adding the about page styles

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,21 +1,22 @@
-<main class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+<main class="container" fxLayout fxLayout.sm="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
   <section fxFlex="50%" class="about-info-container">
     <h2>
       BP3 Test Application
     </h2>
-    <p>
-      Developed by: Pablo Andrés Vélez Vidal
+    <p class="space-above">
+      <span class="label">Developed by:</span>   Pablo Andrés Vélez Vidal
     </p>
-    <article>
-      <h3>Information about the App's architecture</h3>
+    <article class="container space-above">
+      <h2>Information about the App's architecture</h2>
       <div>
-        <h4>Technologies Used:</h4>
-        <ul>
-          <li>Angular 5</li>
-          <li>Angular Material Design</li>
-          <li>Angular Flex-Layout</li>
-          <li>Sass</li>
-        </ul>
+        <h4 class="space-above">Technologies Used:</h4>
+        <ol class="item-list">
+          <li><p>Angular 5</p></li>
+          <li><p>Angular Material Design</p></li>
+          <li><p>Angular Flex-Layout</p></li>
+          <li><p>Sass</p></li>
+          <li><p>Angular Animations</p></li>
+        </ol>
       </div>
     </article>
   </section>
@@ -23,14 +24,15 @@
     <h2>
       Contact Information:
     </h2>
-    <p>
-      Email: pablovv2012@gmail.com 
+    <p class="space-above">
+      <span class="label">Email:</span> <span class="info-text">pablovv2012@gmail.com</span>  
     </p>
     <p>
-      Cellphone: +57 318 876 2544 | +34 694 576 897
+      <span class="label">Cellphone:</span> <span class="info-text">+57 318 876 2544 | +34 694 576 897</span>
     </p>
     <p>
-      Location: Cali, Colombia
+      <span class="label">Location: </span><span class="info-text">Cali, Colombia</span>
     </p>
   </section>
 </main>
+
