remove the config file from the data-service file and improve the styles of the app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="height: 100vh;">
     <mat-toolbar color="primary">
     
-        <h1>BP3 - test application</h1>
+        <p class="main-title">BP3 - Test Application</p>
 
         <span class="example-spacer"></span>
   
@@ -16,7 +16,7 @@
 
       <div fxShow="true" fxHide.gt-sm="true">
   
-          <button (click)="sidenav.toggle()" mat-button>Show Side Menu</button>
+          <mat-icon (click)="sidenav.toggle()" mat-button>menu</mat-icon>
     
         </div>
   
