--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,5 @@
-<main class="container" fxLayout fxLayout.sm="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+<main class="container" fxLayout fxLayout.sm="column" fxLayout.xs="column"
+ fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
   <section fxFlex="50%" class="about-info-container">
     <h2>
       BP3 Test Application
@@ -8,6 +9,9 @@
     </p>
     <article class="container space-above">
       <h2>Information about the App's architecture</h2>
+      <p class="info-text"> 
+        The datasource that matches with the one described in the PDF is the "3 - Branching process". I used all the datasources because it gives the user the option to choose a different Json and apply the same functionality.
+      </p>
       <div>
         <h4 class="space-above">Technologies Used:</h4>
         <ol class="item-list">
